# altro

./: CMakeLists.txt
install/: CMakeLists.txt
src/: CMakeLists.txt
src/altro/solver/: CMakeLists.txt  knotpoint_data.cpp
src/altrocpp_interface/: CMakeLists.txt
src/linesearch/: CMakeLists.txt
src/tvlqr/: CMakeLists.txt
